--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   sqflite_common_ffi: ^2.0.0+3
   path: ^1.8.0
   appwrite: ^13.1.1
+  google_sign_in: ^5.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
